force-app/main/default/objects/ARF_Email_Template__c/ARF_Email_Template__c.object-meta.xml
<CustomObject>
    <description>Configurable email templates with merge fields for AR communications</description>
    <label>AR Email Template</label>
    <nameField>
        <displayFormat>ARFT-{0000}</displayFormat>
        <label>Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>