force-app/main/default/objects/ARF_Email_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this template is available for use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>