force-app/main/default/objects/ARF_Email_Template__c/fields/Body_HTML__c.field-meta.xml
<CustomField>
    <fullName>Body_HTML__c</fullName>
    <description>HTML email body with merge fields like {invoice_table}, {account_name}</description>
    <label>Body HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>