force-app/main/default/objects/ARF_Email_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Template category for filtering</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Collection</fullName><default>true</default><label>Collection</label></value>
                <value><fullName>Reminder</fullName><default>false</default><label>Reminder</label></value>
                <value><fullName>Statement</fullName><default>false</default><label>Statement</label></value>
                <value><fullName>Escalation</fullName><default>false</default><label>Escalation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>