force-app/main/default/objects/ARF_Email_Template__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>Template locale for language-specific communications</description>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>en_US</fullName><default>true</default><label>English (US)</label></value>
                <value><fullName>es</fullName><default>false</default><label>Spanish</label></value>
                <value><fullName>fr</fullName><default>false</default><label>French</label></value>
                <value><fullName>de</fullName><default>false</default><label>German</label></value>
                <value><fullName>ja</fullName><default>false</default><label>Japanese</label></value>
                <value><fullName>zh_CN</fullName><default>false</default><label>Chinese (Simplified)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>