force-app/main/default/objects/ARF_Email_Template__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject line with merge fields like {account_name}</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>